# aws-loggy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  TODOS.md  package-lock.json  package.json  playwright.config.ts  release-please-config.json  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release-please.yml  release.yml
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml
docs/: DESIGN.md
docs/plans/: 2026-01-29-live-tail-streaming-design.md
e2e/: log-group.spec.ts  profile.spec.ts  text-filter.spec.ts  time-filter.spec.ts
e2e/fixtures/: demo.ts
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.tsx  ContextMenu.tsx  FilterBar.test.tsx  FilterBar.tsx  FindBar.tsx  GroupHeader.test.tsx  GroupHeader.tsx  JsonSyntaxHighlight.tsx  LogDetailInline.tsx  LogGroupSelector.test.tsx  LogGroupSelector.tsx  LogRowDetail.tsx  LogViewer.tsx  MaximizedLogView.tsx  MergedFilterBar.tsx  MergedPanelView.tsx  PanelContainer.tsx  PanelView.tsx  SettingsDialog.tsx  StatusBar.tsx  TimePresetEditor.test.tsx  TimePresetEditor.tsx  TimeRangePicker.test.tsx  TimeRangePicker.tsx  UpdateDialog.test.tsx  UpdateDialog.tsx  WorkspaceBar.tsx  WorkspaceMenu.tsx
src/contexts/: PanelContext.tsx
src/demo/: DemoTailTransport.ts  demoInvoke.ts  demoStore.ts  mockData.ts
src/hooks/: useDebounce.ts  useDragSelection.ts  (+7 more)
(+23 files in other folders)
