[package]
name = "loggy"
version = "1.3.0"
description = "A fast, native desktop app for browsing and tailing AWS CloudWatch logs"
authors = ["Bryan Stone"]
license = "MIT"
repository = "https://github.com/aegixx/aws-loggy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "loggy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-cloudwatchlogs = "1.111.0"
aws-config = "1.8.11"
aws-credential-types = "1"
tokio = { version = "1.48.0", features = ["full"] }
